force-app/trigger-framework/objects/TriggerHandlerSetting__mdt/TriggerHandlerSetting__mdt.object-meta.xml
<CustomObject>
    <description>Handler-level setting for managing trigger logic for an SObject.</description>
    <label>Trigger Handler Setting</label>
    <pluralLabel>Trigger Handler Settings</pluralLabel>
</CustomObject>