force-app/trigger-framework/objects/TriggerHandlerSetting__mdt/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>The name of the trigger handler class that this configuration injects.</description>
    <inlineHelpText>The name of the trigger handler class that this configuration injects.</inlineHelpText>
    <label>Class Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>