force-app/trigger-framework/objects/TriggerHandlerSetting__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority of execution, with lower numbers being executed first. Handlers with no priority will be executed last.</description>
    <inlineHelpText>Priority of execution, with lower numbers being executed first. Handlers with no priority will be executed last.</inlineHelpText>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>