force-app/trigger-framework/objects/TriggerHandlerSetting__mdt/fields/SObjectTriggerSetting__c.field-meta.xml
<CustomField>
    <fullName>SObjectTriggerSetting__c</fullName>
    <description>The SObject setting that this handler should be bound to.</description>
    <inlineHelpText>The SObject setting that this handler should be bound to.</inlineHelpText>
    <label>SObject Trigger Setting</label>
    <referenceTo>SObjectTriggerSetting__mdt</referenceTo>
    <relationshipLabel>Trigger Handler Settings</relationshipLabel>
    <relationshipName>TriggerHandlerSettings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>